# 2048

./: Board.py  Board_Test.py  Button.py  README.md  main.py  measures.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/2048py/: malware.py
src/2048pygame/: Board.py  __init__.py
src/py2048/: Board.py  Board_Test.py  __main__.py  downloader.py
