[metadata]
name = py2048-coolin
version = 0.1.14
author = Collin Francel 
author_email = collin.t.francel@gmail.com
description = 2048 game written with Pygame
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xXCoolinXx/2048
project_urls =
    Bug Tracker = https://github.com/xXCoolinXx/2048/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src